--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "author": "Heli Ríos",
   "license": "MIT",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "dev": "parcel src/index.html"
   },
   "devDependencies": {
     "babel-jest": "^24.7.1",
@@ -17,6 +18,7 @@
     "jest": "^24.7.1",
     "moment": "^2.24.0",
     "nock": "^10.0.6",
+    "parcel-bundler": "^1.12.3",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-addons-test-utils": "^15.6.2",
